# ai-bootcamp-dtc

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  ai-bootcamp-dtc.code-workspace  docker-compose.yml  pyproject.toml
week1/: week1_q4_q6_podcasts.ipynb  week1_q4_q6_podcasts_draft.ipynb
week2/: week2_q4_q6_wikipedia_summary_agent.ipynb
week3/wikiagent/: __init__.py  agent_logging.py  csvlog.py  evaluator.py  judge.py  main.py  questions.txt  tools.py  wikiagent.py
week3/wikiagent/tests/: test_wikiagent.py  test_wikiagent_llm_judge.py
week4/logs/: wikiagent_20251120_052849_3a7e5d.json
