[project]
name = "ai-bootcamp"
version = "0.1.0"
description = "AI Bootcamp local environment (uv + Docker + Ollama)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "openai>=1.51",
    "requests>=2.32",
    "minsearch>=0.0.4",
    "jupyter>=1.0.0",
    "tqdm",
    "sentence-transformers",
    "youtube-transcript-api",
    "python-frontmatter",
    "fastmcp",
    "toyaikit",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "duckduckgo-search>=5.3.1",
    "beautifulsoup4>=4.12",
    "tiktoken>=0.7",
    "lxml>=5.2",
    "html5lib>=1.1"
]
